--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # Xcode
-.DS_Store
-build/
+#
+./build
 *.pbxuser
 !default.pbxuser
 *.mode1v3
@@ -9,13 +9,14 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-*.xcworkspace
-!default.xcworkspace
 xcuserdata
-profile
+*.xccheckout
 *.moved-aside
 DerivedData
-.idea/
-Pods/
-QuickLook/
-AppStorePackages/
+*.hmap
+*.ipa
+*.xcuserstate
+.DS_Store
+Carthage/Checkouts
+Gemfile
+Gemfile.lock
